select product from cart to place order